--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -28,6 +28,69 @@
 
     </ListView>
 
+    <!-- CheckBox here -->
+    <LinearLayout
+		android:layout_width="match_parent" 
+		android:layout_height="wrap_content"
+		android:orientation="horizontal">
+		
+        <CheckBox
+            android:id="@+id/checkbox_go"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/cb_go"
+            android:visibility="gone"
+            android:enabled="false"/>
+          	
+        <CheckBox
+            android:id="@+id/checkbox_ct1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/cb_ct1"
+            android:visibility="gone"
+            android:enabled="false"/>
+          	
+        <CheckBox
+            android:id="@+id/checkbox_ct2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/cb_ct2"
+            android:visibility="gone"            
+            android:enabled="false"/>
+        
+        <CheckBox
+            android:id="@+id/checkbox_ct3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/cb_ct3"
+            android:visibility="gone"
+            android:enabled="false"/>
+        
+        <CheckBox
+            android:id="@+id/checkbox_ct4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/cb_ct4"
+            android:visibility="gone"
+            android:enabled="false"/>
+        
+        <CheckBox
+            android:id="@+id/checkbox_ct5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/cb_ct5"
+            android:visibility="gone"
+            android:enabled="false"/>
+        
+	</LinearLayout>	
+    
+    
     <Button
         android:id="@+id/clearBtn2"
         android:layout_width="wrap_content"
