--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -100,7 +100,7 @@
         android:text="Clear" />
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/filenameET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/clearBtn2"
