--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -13,8 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
+        android:layout_toRightOf="@+id/isEnd"
         android:text="Ping" />
 
     <ListView
@@ -25,72 +25,71 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/clearBtn2"
         android:stackFromBottom="false" >
-
     </ListView>
 
     <!-- CheckBox here -->
+
     <LinearLayout
-		android:layout_width="match_parent" 
-		android:layout_height="wrap_content"
-		android:orientation="horizontal">
-		
+        android:id="@+id/linearLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
         <CheckBox
             android:id="@+id/checkbox_go"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:enabled="false"
             android:text="@string/cb_go"
-            android:visibility="gone"
-            android:enabled="false"/>
-          	
+            android:visibility="gone" />
+
         <CheckBox
             android:id="@+id/checkbox_ct1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:enabled="false"
             android:text="@string/cb_ct1"
-            android:visibility="gone"
-            android:enabled="false"/>
-          	
+            android:visibility="gone" />
+
         <CheckBox
             android:id="@+id/checkbox_ct2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:enabled="false"
             android:text="@string/cb_ct2"
-            android:visibility="gone"            
-            android:enabled="false"/>
-        
+            android:visibility="gone" />
+
         <CheckBox
             android:id="@+id/checkbox_ct3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:enabled="false"
             android:text="@string/cb_ct3"
-            android:visibility="gone"
-            android:enabled="false"/>
-        
+            android:visibility="gone" />
+
         <CheckBox
             android:id="@+id/checkbox_ct4"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:enabled="false"
             android:text="@string/cb_ct4"
-            android:visibility="gone"
-            android:enabled="false"/>
-        
+            android:visibility="gone" />
+
         <CheckBox
             android:id="@+id/checkbox_ct5"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:enabled="false"
             android:text="@string/cb_ct5"
-            android:visibility="gone"
-            android:enabled="false"/>
-        
-	</LinearLayout>	
-    
-    
+            android:visibility="gone" />
+    </LinearLayout>
+
     <Button
         android:id="@+id/clearBtn2"
         android:layout_width="wrap_content"
@@ -112,5 +111,23 @@
 
         <requestFocus />
     </EditText>
+
+    <CheckBox
+        android:id="@+id/isStart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/pingBtn"
+        android:layout_alignParentLeft="true"
+        android:text="Sender" 
+        android:onClick="onCheckboxClicked"/>
+
+    <CheckBox
+        android:id="@+id/isEnd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/pingBtn"
+        android:layout_toRightOf="@+id/isStart"
+        android:text="Receiver" 
+        android:onClick="onCheckboxClicked"/>
 
 </RelativeLayout>
